refactor(common): extract common logic in separate project